[tool.poetry]
name = "nano35_brain_games"
version = "0.8.1"
description = "hexlet project lv1"
classifiers = [
  "Environment :: Console",
  "Topic :: Games/Entertainment :: Puzzle Games"
]
authors = ["nano35 <nikolasha24@bk.ru>"]
repository = "https://github.com/Nano35/python-project-49"

packages = [
    { include = "brain_games" }
]

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.scripts]
  brain-games = "brain_games.scripts.brain_games:main"
  brain-even = "brain_games.scripts.brain_even:main"
  brain-calc = "brain_games.scripts.brain_calc:main"
  brain-gcd = "brain_games.scripts.brain_gcd:main"
  brain-progression = "brain_games.scripts.brain_progression:main"
  brain-prime = "brain_games.scripts.brain_prime:main"


[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
